--- a/Sistema_Guarderia.csproj
+++ b/Sistema_Guarderia.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16" />
+    <PackageReference Include="Radzen.Blazor" Version="4.13.5" />
   </ItemGroup>
 
 </Project>
